--- a/GlobalBlueVATApi/GlobalBlueVATApi/GlobalBlueVATApi.csproj
+++ b/GlobalBlueVATApi/GlobalBlueVATApi/GlobalBlueVATApi.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.53.0.62665">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
