--- a/GlobalBlueVATApi/UnitTestsGlobalBlueVatApi/UnitTestsGlobalBlueVatApi.csproj
+++ b/GlobalBlueVATApi/UnitTestsGlobalBlueVatApi/UnitTestsGlobalBlueVatApi.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.5.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.53.0.62665">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
